crates/loxia-tui/src/modals/snapshots/loxia_tui__modals__equalizer__tests__equalizer_snapshot_short.snap
---
source: crates/loxia-tui/src/modals/equalizer.rs
assertion_line: 604
expression: rendered
---
Buffer {
    area: Rect { x: 0, y: 0, width: 90, height: 15 },
    content: [
        "                                                                                          ",
        "                                                                                          ",
        "                                                                                          ",
        "      ┌EQUALIZER [Preset: Custom] [Status: ACTIVE]─────────────────────────────────┐      ",
        "      │ +12dB ┤  ▂▂    ▂▂    ▂▂    ▂▂    ▂▂    ▂▂    ▂▂    ▂▂    ▂▂    ▂▂          │      ",
        "      │   0dB ┼──██────██────██────██────██────██────██────██────██────██──────────│      ",
        "      │ -12dB ┤                                                                    │      ",
        "      │       └───┬─────┬─────┬─────┬─────┬─────┬─────┬─────┬─────┬─────┬──────────│      ",
        "      │          31    63    125   250   500   1k    2k    4k    8k    16k         │      ",
        "      │[↑/↓] ±0.5dB  [p] Preset  [b] Bypass  [t] On/Off  [↵] Apply  [Esc] Cancel   │      ",
        "      └────────────────────────────────────────────────────────────────────────────┘      ",
        "                                                                                          ",
        "                                                                                          ",
        "                                                                                          ",
        "                                                                                          ",
    ],
    styles: [
        x: 0, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 6, y: 3, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 84, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 6, y: 4, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 7, y: 4, fg: Indexed(8), bg: Reset, underline: Reset, modifier: NONE,
        x: 15, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 17, y: 4, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 19, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 23, y: 4, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 25, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 29, y: 4, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 31, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 35, y: 4, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 37, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 41, y: 4, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 43, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 47, y: 4, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 49, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 53, y: 4, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 55, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 59, y: 4, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 61, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 65, y: 4, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 67, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 71, y: 4, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 73, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 83, y: 4, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 84, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 6, y: 5, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 7, y: 5, fg: Indexed(8), bg: Reset, underline: Reset, modifier: NONE,
        x: 17, y: 5, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 19, y: 5, fg: Indexed(8), bg: Reset, underline: Reset, modifier: NONE,
        x: 23, y: 5, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 25, y: 5, fg: Indexed(8), bg: Reset, underline: Reset, modifier: NONE,
        x: 29, y: 5, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 31, y: 5, fg: Indexed(8), bg: Reset, underline: Reset, modifier: NONE,
        x: 35, y: 5, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 37, y: 5, fg: Indexed(8), bg: Reset, underline: Reset, modifier: NONE,
        x: 41, y: 5, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 43, y: 5, fg: Indexed(8), bg: Reset, underline: Reset, modifier: NONE,
        x: 47, y: 5, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 49, y: 5, fg: Indexed(8), bg: Reset, underline: Reset, modifier: NONE,
        x: 53, y: 5, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 55, y: 5, fg: Indexed(8), bg: Reset, underline: Reset, modifier: NONE,
        x: 59, y: 5, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 61, y: 5, fg: Indexed(8), bg: Reset, underline: Reset, modifier: NONE,
        x: 65, y: 5, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 67, y: 5, fg: Indexed(8), bg: Reset, underline: Reset, modifier: NONE,
        x: 71, y: 5, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 73, y: 5, fg: Indexed(8), bg: Reset, underline: Reset, modifier: NONE,
        x: 83, y: 5, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 84, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 6, y: 6, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 7, y: 6, fg: Indexed(8), bg: Reset, underline: Reset, modifier: NONE,
        x: 15, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 83, y: 6, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 84, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 6, y: 7, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 7, y: 7, fg: Indexed(8), bg: Reset, underline: Reset, modifier: NONE,
        x: 83, y: 7, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 84, y: 7, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 6, y: 8, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 7, y: 8, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 17, y: 8, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 19, y: 8, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 23, y: 8, fg: Indexed(8), bg: Reset, underline: Reset, modifier: NONE,
        x: 25, y: 8, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 29, y: 8, fg: Indexed(8), bg: Reset, underline: Reset, modifier: NONE,
        x: 32, y: 8, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 35, y: 8, fg: Indexed(8), bg: Reset, underline: Reset, modifier: NONE,
        x: 38, y: 8, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 41, y: 8, fg: Indexed(8), bg: Reset, underline: Reset, modifier: NONE,
        x: 44, y: 8, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 47, y: 8, fg: Indexed(8), bg: Reset, underline: Reset, modifier: NONE,
        x: 49, y: 8, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 53, y: 8, fg: Indexed(8), bg: Reset, underline: Reset, modifier: NONE,
        x: 55, y: 8, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 59, y: 8, fg: Indexed(8), bg: Reset, underline: Reset, modifier: NONE,
        x: 61, y: 8, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 65, y: 8, fg: Indexed(8), bg: Reset, underline: Reset, modifier: NONE,
        x: 67, y: 8, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 71, y: 8, fg: Indexed(8), bg: Reset, underline: Reset, modifier: NONE,
        x: 74, y: 8, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 83, y: 8, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 84, y: 8, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 6, y: 9, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 7, y: 9, fg: Indexed(8), bg: Reset, underline: Reset, modifier: NONE,
        x: 80, y: 9, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 83, y: 9, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 84, y: 9, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 6, y: 10, fg: Indexed(12), bg: Reset, underline: Reset, modifier: NONE,
        x: 84, y: 10, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
    ]
}
